versions/GNDS-v2.0/GNDS/c/src/v2.0/general/Charge.h


// THIS FILE WAS AUTOGENERATED!
// DO NOT MODIFY!

// Interface for C
// This header file is designed to work with both C and C++
// Function definitions are in this file's .cpp source

// -----------------------------------------------------------------------------
// -----------------------------------------------------------------------------
// Instructions for Users
//
// Constructs you're MORE likely to care about are preceded with:
//    // +++ remark
// Constructs you're LESS likely to care about are preceded with:
//    // --- remark
// Anything not marked as above can be ignored by most users.
//
// Charge is the basic handle type in this file. Example:
//    // Create a default Charge object:
//    Charge handle = ChargeDefault();
// Functions involving Charge are declared throughout this file.
// -----------------------------------------------------------------------------
// -----------------------------------------------------------------------------


// -----------------------------------------------------------------------------
// Preliminaries
// -----------------------------------------------------------------------------

#ifndef C_INTERFACE_GNDS_V2_0_GENERAL_CHARGE
#define C_INTERFACE_GNDS_V2_0_GENERAL_CHARGE

#include "GNDStk.h"
#include "v2.0/general/Integer.h"

#ifdef __cplusplus
   #define extern_c extern "C"
#else
   #define extern_c
#endif

// Proxy C struct for the handled C++ class
struct ChargeClass { };


// -----------------------------------------------------------------------------
// Handle types
// -----------------------------------------------------------------------------

// +++ Charge
// +++ General handle, suitable for most users. If you're not concerned about
// +++ strict "const correctness" in your C code, you can probably use this in
// +++ place of any function parameter of a const-aware handle type.
typedef struct ChargeClass *Charge;

// --- Const-aware handles.
typedef const struct ChargeClass *const ConstHandle2ConstCharge;
typedef       struct ChargeClass *const ConstHandle2Charge;
typedef const struct ChargeClass *      Handle2ConstCharge;
typedef       struct ChargeClass *      Handle2Charge;


// -----------------------------------------------------------------------------
// Basics
// Create, Assign, Delete
// -----------------------------------------------------------------------------

// --- Create, default, const
extern_c Handle2ConstCharge
ChargeDefaultConst();

// +++ Create, default
extern_c Handle2Charge
ChargeDefault();

// --- Create, general, const
extern_c Handle2ConstCharge
ChargeCreateConst(
   ConstHandle2ConstInteger integer
);

// +++ Create, general
extern_c Handle2Charge
ChargeCreate(
   ConstHandle2ConstInteger integer
);

// +++ Assign
// +++ Use this to assign one handled object to another. Don't assign handles,
// +++ as with to = from. That has a meaning that you probably don't intend.
extern_c void
ChargeAssign(ConstHandle2Charge self, ConstHandle2ConstCharge from);

// +++ Delete
// +++ We'll attempt to remove no-longer-used objects automatically, but you
// +++ may improve performance if you delete them when you're done with them.
extern_c void
ChargeDelete(ConstHandle2ConstCharge self);


// -----------------------------------------------------------------------------
// I/O
// Read, Write, Print
// Each returns 0 if failure, 1 if success.
// -----------------------------------------------------------------------------

// +++ Read from file
// +++ File can be XML, JSON, or HDF5.
// +++ We'll examine the file's contents to determine its type automatically.
extern_c int
ChargeRead(ConstHandle2Charge self, const char *const filename);

// +++ Write to file
// +++ File can be XML, JSON, or HDF5.
// +++ We'll use filename's extension to determine the type you want written.
extern_c int
ChargeWrite(ConstHandle2ConstCharge self, const char *const filename);

// +++ Print to standard output, in our prettyprinting format
extern_c int
ChargePrint(ConstHandle2ConstCharge self);

// +++ Print to standard output, as XML
extern_c int
ChargePrintXML(ConstHandle2ConstCharge self);

// +++ Print to standard output, as JSON
extern_c int
ChargePrintJSON(ConstHandle2ConstCharge self);


// -----------------------------------------------------------------------------
// Child: integer
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
ChargeIntegerHas(ConstHandle2ConstCharge self);

// --- Get, const
extern_c Handle2ConstInteger
ChargeIntegerGetConst(ConstHandle2ConstCharge self);

// +++ Get
extern_c Handle2Integer
ChargeIntegerGet(ConstHandle2Charge self);

// +++ Set
extern_c void
ChargeIntegerSet(ConstHandle2Charge self, ConstHandle2ConstInteger integer);


// -----------------------------------------------------------------------------
// Custom functionality
// -----------------------------------------------------------------------------

#include "v2.0/general/Charge/src/custom.h"

#undef extern_c
#endif